--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
+[submodule "2022-23/4/Tema_3_-_3/ElevatorSimulator"]
+	path = 2022-23/4/Tema_3_-_3/ElevatorSimulator
+	url = https://github.com/bsaid/ElevatorSimulator.git
+[submodule "2022-23/3/Téma 3/ElevatorSimulator"]
+	path = 2022-23/3/Téma 3/ElevatorSimulator
+	url = https://github.com/bsaid/ElevatorSimulator.git
+[submodule "2022-23/2/Téma 3/--force"]
+	path = 2022-23/2/Téma 3/--force
+	url = https://github.com/bsaid/ElevatorSimulator.git
 [submodule "2022-23/2/Téma 3/ElevatorSimulator"]
 	path = 2022-23/2/Téma 3/ElevatorSimulator
-	url = https://github.com/bsaid/ElevatorSimulator
+	url = https://github.com/bsaid/ElevatorSimulator.git
